# maasv

./: .gitignore  Dockerfile  HANDOFF.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.env.example
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  format_results.py  run_retrieval_quality.py
benchmarks/adapters/: base.py  maasv_adapter.py  mem0_adapter.py  zep_adapter.py
benchmarks/cognition/: __init__.py  llm_rerank_test.py  queries.py  runner.py  scoring.py
benchmarks/dataset/: generator.py  schemas.py
benchmarks/embed/: deterministic.py
benchmarks/metrics/: ir_metrics.py
benchmarks/real_data/: __init__.py  bootstrap_ranker.py  judge.py  latency.py  queries.py  runner.py
docs/: privacy-policy.md
docs/evaluation/: ips-comparison.md  learning-curves.md
docs/integrations/: langchain.md
docs/research/: maasv-22-cross-entity-synthesis.md  maasv-23-proactive-trigger-engine.md  maasv-24-subagent-enrichment.md
docs/security/: prompt-injection-research.md
examples/: quickstart.py
maasv/: __init__.py  config.py  protocols.py  utils.py
maasv/core/: __init__.py  after_action.py  autograd.py  commitments.py  db.py  graph.py  learned_ranker.py  llm_reranker.py  model_router.py  reranker.py  retrieval.py  store.py  wisdom.py  world_model.py
maasv/extraction/: __init__.py  entity_extraction.py
maasv/ingestion/: __init__.py  chunking.py  cli.py  formats.py  pipeline.py  report.py
maasv/integrations/: __init__.py  langchain.py
maasv/lifecycle/: __init__.py  inference.py  learn.py  memory_hygiene.py  reorganize.py  review.py  worker.py
maasv/mcp_server/: __init__.py  __main__.py  cf_auth.py  config.py  server.py
maasv/providers/: __init__.py  ollama.py
maasv/server/: __init__.py  auth.py  config.py  main.py  providers.py
maasv/server/routers/: extraction.py  graph.py  health.py  ingest.py  memory.py  wisdom.py
scripts/: ips_comparison.py  learning_curves.py  start_mcp.sh  start_server.sh
tests/: test_cf_auth.py  test_decomposition.py  test_embed_model_tracking.py  test_langchain.py  test_learned_ranker.py  test_llm_routing.py  test_model_router.py  test_origin.py  test_prompt_injection.py  test_rrf.py  test_server_smoke.py  test_world_model.py
