[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maasv"
version = "0.2.0"
description = "Your cognition layer — one memory, every agent, every source"
requires-python = ">=3.11"
license = {text = "BSL-1.1"}
authors = [
    {name = "Adam Bell", email = "adam@maasv.ai"},
]
readme = "README.md"
keywords = ["memory", "knowledge-graph", "ai-agents", "cognition", "multi-agent", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sqlite-vec>=0.1.1,<1.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
voyage = ["voyageai>=0.3"]
mcp = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
langchain = [
    "langchain-core>=0.3.0",
]
all = [
    "maasv[server,mcp,anthropic,voyage,langchain]",
]
reranking = [
    "sentence-transformers>=2.0.0",
    # NOTE: pulls in torch (~2GB). Only needed if cross_encoder_enabled=True.
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
maasv-server = "maasv.server.main:run"
maasv-mcp = "maasv.mcp_server.server:run"

[project.urls]
Homepage = "https://maasv.com"
Repository = "https://github.com/ascottbell/maasv"

[tool.setuptools.packages.find]
include = ["maasv*"]
exclude = ["scripts*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
